# SoundCrux

./: .gitignore  CMakeLists.txt  README.md  build_android.sh  build_android_debug.bat  build_ninja_debug.bat  build_ninja_release.bat  build_openal_android.bat  build_openal_x64.bat  build_vs_debug.bat  build_x64_debug.bat  build_x64_release.bat  init_env.bat  vcpkg.json
cmake/: SoundCruxConfig.cmake.in
include/: SoundCrux.hpp
include/Core/: AudioEngine.hpp  AudioGenerator.hpp  Sample.hpp  StereoSample.hpp
include/Core/Config/: AudioEngine_Config.hpp
include/Examples/Oscillators/: SawtoothOsc_Example.hpp  SineOsc_Example.hpp
include/Examples/Oscillators/Base/: Oscillator_Example.hpp
src/Core/: AudioEngine.cpp  AudioGenerator.cpp  Sample.cpp  StereoSample.cpp
src/Core/Config/: AudioEngine_Config.cpp
src/Examples/: Program_Example.cpp
src/Examples/Oscillators/: SawtoothOsc_Example.cpp  SineOsc_Example.cpp
src/Examples/Oscillators/Base/: Oscillator_Example.cpp
